--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>用户注册</title>
 </head>
 <body>
-
+//文件修改
 <center>
     <div style="background-color: #61a1bc;width: 50%;height: 300px">
         <form action="{:url('user/insert')}" method="post" enctype="multipart/form-data">
